--- a/test_discretization.ipynb
+++ b/test_discretization.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -18,14 +20,24 @@
    "outputs": [],
    "source": [
     "def EC_at_bifiltration(contributions, f1, f2):\n",
-    "    return sum([c[1] for c in contributions if (c[0][0] <= f1) and (c[0][1] <= f2)])"
+    "    return sum([c[1] for c in contributions if (c[0][0] <= f1) and (c[0][1] <= f2)])\n",
+    "\n",
+    "\n",
+    "def EC_at_RGB_value(contributions, r, g, b):\n",
+    "    return sum(\n",
+    "        [\n",
+    "            c[1]\n",
+    "            for c in contributions\n",
+    "            if (c[0][0] <= r) and (c[0][1] <= g) and (c[0][2] <= b)\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the contributions"
+    "## 2dim"
    ]
   },
   {
@@ -274,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## discretize"
+    "### discretize"
    ]
   },
   {
@@ -407,6 +419,295 @@
     "        delimiter=\",\",\n",
     "        fmt=\"%10.10f\",\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R</th>\n",
+       "      <th>G</th>\n",
+       "      <th>B</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37071</th>\n",
+       "      <td>255</td>\n",
+       "      <td>253</td>\n",
+       "      <td>232</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37072</th>\n",
+       "      <td>255</td>\n",
+       "      <td>253</td>\n",
+       "      <td>241</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37073</th>\n",
+       "      <td>255</td>\n",
+       "      <td>254</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37074</th>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>203</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37075</th>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>234</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>37076 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         R    G    B  c\n",
+       "0        0    0    0  3\n",
+       "1        0    0    2  1\n",
+       "2        0    1    0  4\n",
+       "3        0    2    0  3\n",
+       "4        0    3    0  2\n",
+       "...    ...  ...  ... ..\n",
+       "37071  255  253  232  1\n",
+       "37072  255  253  241  1\n",
+       "37073  255  254  236  1\n",
+       "37074  255  255  203  1\n",
+       "37075  255  255  234  1\n",
+       "\n",
+       "[37076 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contributions_df = pd.read_csv(\n",
+    "    \"data/cat_ECP.csv\", header=None, sep=\" \", names=[\"R\", \"G\", \"B\", \"c\"]\n",
+    ")\n",
+    "contributions_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, 0, 0), 3),\n",
+       " ((0, 0, 2), 1),\n",
+       " ((0, 1, 0), 4),\n",
+       " ((0, 2, 0), 3),\n",
+       " ((0, 3, 0), 2)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contributions_list = [((r[0], r[1], r[2]), r[3]) for r in contributions_df.values]\n",
+    "contributions_list[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a6699fc8a194c869ef1f6418c849ec3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df7e2800ab8344a7a8b7de8a91cd2ca2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4e9570af6984b4dad4246536f776a1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8eb80499a8de492aa0cf957a765c2983",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "MIN_R = 0\n",
+    "MAX_R = 255\n",
+    "\n",
+    "GRIDSIZES = [(10, 10, 10), (26, 26, 26), (100, 100, 100)]\n",
+    "\n",
+    "for GRIDSIZE in tqdm(GRIDSIZES):\n",
+    "\n",
+    "    ## initializing matrix\n",
+    "    M = np.zeros(GRIDSIZE, dtype=int)\n",
+    "\n",
+    "    # computing\n",
+    "    for i, r in tqdm(\n",
+    "        enumerate(\n",
+    "            np.linspace(start=MIN_R, stop=MAX_R, num=GRIDSIZE[0], endpoint=False)[::-1]\n",
+    "        )\n",
+    "    ):\n",
+    "        for j, g in enumerate(\n",
+    "            np.linspace(start=MIN_R, stop=MAX_R, num=GRIDSIZE[1], endpoint=False)[::-1]\n",
+    "        ):\n",
+    "            for k, b in enumerate(\n",
+    "                np.linspace(start=MIN_R, stop=MAX_R, num=GRIDSIZE[2], endpoint=False)[\n",
+    "                    ::-1\n",
+    "                ]\n",
+    "            ):\n",
+    "                M[k, j, i] = EC_at_RGB_value(contributions_list, r, g, b)\n",
+    "\n",
+    "    with open(\n",
+    "        \"output/3d/cat_{}x{}x{}.csv\".format(GRIDSIZE[0], GRIDSIZE[1], GRIDSIZE[2]), \"w\"\n",
+    "    ) as file:\n",
+    "        for i in range(M.shape[0]):\n",
+    "            file.write(f\"Layer {i}:\\n\")\n",
+    "            np.savetxt(file, M[i].T, fmt=\"%i\", delimiter=\",\")\n",
+    "\n",
+    "    # let us also save the coordinates\n",
+    "    for i, c in enumerate([\"R\", \"G\", \"B\"]):\n",
+    "        np.savetxt(\n",
+    "            \"output/3d/cat_{}_{}_grid.csv\".format(GRIDSIZE[i], c),\n",
+    "            np.linspace(start=MAX_R, stop=MIN_R, num=GRIDSIZE[i], endpoint=False)[::-1],\n",
+    "            delimiter=\",\",\n",
+    "            fmt=\"%10.10f\",\n",
+    "        )"
    ]
   },
   {
